--- a/container_status_app/templates/container_status/nas_add_faq.html
+++ b/container_status_app/templates/container_status/nas_add_faq.html
@@ -24,16 +24,10 @@
                         <label for="faqContent">Answer</label>
                         <textarea class="form-control" name="faq_content" id="faqContent" rows="10"></textarea>
                     </div>
-                    <div class="form-group">
-                        <div class="input-group w-25">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="uploadText-addon">Upload</span>
-                            </div>
-                            <div class="custom-file">
-                                <input type="file" class="custom-file-input w-25" id="uploadFAQFile" name="faq_file" aria-describedby="uploadFileAddon">
-                                <label class="custom-file-label" for="uploadFAQFile">Choose File</label>
-                            </div>
-                        </div>
+                    <div class="form-inline">
+                        <label for="uploadFAQFile">Choose File</label>
+                        <input type="file" class="form-control-file w-25" id="uploadFAQFile" name="faq_file">
+
                     </div>
                     <button type="submit" name="addFAQButton" class="btn btn-outline-success mt-2">Add</button>
                 </form>
