--- a/container_status_app/templates/container_status/nas_add_faq.html
+++ b/container_status_app/templates/container_status/nas_add_faq.html
@@ -25,7 +25,7 @@
                         <textarea class="form-control" name="faq_content" id="faqContent" rows="10"></textarea>
                     </div>
                     <div class="form-inline">
-                        <label for="uploadFAQFile">Choose File</label>
+                        <label for="uploadFAQFile"></label>
                         <input type="file" class="form-control-file w-25" id="uploadFAQFile" name="faq_file">
 
                     </div>
