--- a/container_status_app/templates/container_status/nas_add_faq.html
+++ b/container_status_app/templates/container_status/nas_add_faq.html
@@ -74,6 +74,12 @@
                                     <div class="card-body">
                                         <div class="card">
                                             <div class="card-body">
+                                                {% if faq_dicts|length > 0 %}
+                                                    <div class="form-check text-danger">
+                                                        <input class="form-check-input" type="checkbox" name="{{ faq_type_key }}:ALL" value="ALL" id="{{ faq_type_key }}DeleteAllCheckbox">
+                                                        <label class="form-check-label" for="{{ faq_type_key }}DeleteAllCheckbox">Delete All</label>
+                                                    </div>
+                                                {% endif %}
                                                 {% for faq_title in faq_dicts.keys() %}
                                                     <div class="form-check">
                                                         <input class="form-check-input" type="checkbox"
