Use PRG(post-redirect-get) when registering or deleting emails. This allows users to refresh status page without resending post form data.

--- a/container_status_app/templates/container_status/nas_notify.html
+++ b/container_status_app/templates/container_status/nas_notify.html
@@ -94,9 +94,7 @@
                 <div class="card">
                     <h5 class="card-header bg-primary">Send Email Notification</h5>
                     <div class="card-body">
-                        <p>
-                            Use the form below to send out a non platform outage notification to all the registered email addresses.
-                        </p>
+                        <p>Use this form to send any generic email out to registered users.</p>
                         <form class="was-validated" method="POST" autocomplete="off">
                             <div class="form-group">
                                 <label for="fromEmailAddr"></label>
