--- a/container_status_app/templates/container_status/nas_notify.html
+++ b/container_status_app/templates/container_status/nas_notify.html
@@ -96,6 +96,23 @@
                     <div class="card-body">
                         <p>Use this form to send any generic email out to registered users.</p>
                         <form class="was-validated" method="POST" autocomplete="off">
+                            {% for app in nas_prod_status_data.applications.keys() %}
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="app_email_radio" id="{{ app }}Radio" value="{{ app }}" required>
+                                    <label class="form-check-label" for="{{ app }}Radio">{{ app }}</label>
+                                </div>
+                            {% endfor %}
+                            {% for app in nas_prod_status_data.new_platform_apps.keys() %}
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="app_email_radio" id="{{ app }}Radio" value="{{ app }}" required>
+                                    <label class="form-check-label" for="{{ app }}Radio">{{ app }}</label>
+                                </div>
+                            {% endfor %}
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="app_email_radio" id="allRadio" value="ALL" required>
+                                <label class="form-check-label" for="allRadio">ALL</label>
+                                <div class="invalid-feedback">Please select an application</div>
+                            </div>
                             <div class="form-group">
                                 <label for="fromEmailAddr"></label>
                                 <div class="input-group">
@@ -120,25 +137,25 @@
                             </div>
                             <button type="submit" name="nas_notify_form" class="btn btn-outline-primary mt-2">Submit</button>
                         </form>
-                        {% with messages = get_flashed_messages() %}
-                            {% if messages %}
-                                {% for message in messages %}
-                                    {% if 'Error' in message %}
-                                        <div class="alert alert-danger" role="alertdialog">
-                                            {{ message }}
-                                        </div>
-                                    {% else %}
-                                        <div class="alert alert-success" role="alertdialog">
-                                            {{ message }}
-                                        </div>
-                                    {% endif %}
-                                {% endfor %}
-                            {% endif %}
-                        {% endwith %}
                     </div>
                 </div>
             </div>
         </div>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    {% if 'Error' in message %}
+                        <div class="alert alert-danger" role="alertdialog">
+                            {{ message }}
+                        </div>
+                    {% else %}
+                        <div class="alert alert-success" role="alertdialog">
+                            {{ message }}
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
     </div>
     <div class="container">
         <div class="row">
