Add same background color and header size for Registered Emails as Notifications card.

--- a/container_status_app/templates/container_status/nas_prod_status.html
+++ b/container_status_app/templates/container_status/nas_prod_status.html
@@ -216,9 +216,7 @@
             </div>
             <div class="col-md-9">
                 <div class="card">
-                    <div class="card-header">
-                        Registered Emails
-                    </div>
+                    <h5 class="card-header bg-info">Registered Emails</h5>
                     <div class="card-body">
                         {% if list_registered_emails is defined %}
                             <div class="row">
