--- a/container_status_app/templates/container_status/nas_notify.html
+++ b/container_status_app/templates/container_status/nas_notify.html
@@ -111,7 +111,7 @@
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="app_email_radio" id="allRadio" value="ALL" required>
                                 <label class="form-check-label" for="allRadio">ALL</label>
-                                <div class="invalid-feedback">Please select an application</div>
+                                <div class="invalid-feedback">Please select an option.</div>
                             </div>
                             <div class="form-group">
                                 <label for="fromEmailAddr"></label>
