--- a/container_status_app/templates/container_status/nas_notify.html
+++ b/container_status_app/templates/container_status/nas_notify.html
@@ -95,7 +95,7 @@
                     <h5 class="card-header bg-primary">Send Email Notification</h5>
                     <div class="card-body">
                         <p>Use this form to send any generic email out to registered users.</p>
-                        <form class="was-validated" method="POST" autocomplete="off">
+                        <form class="was-validated" method="POST" autocomplete="off" enctype="multipart/form-data">
                             {% for app in nas_prod_status_data.applications.keys() %}
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="app_email_radio" id="{{ app }}Radio" value="{{ app }}" required>
@@ -136,14 +136,9 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text" id="uploadText-addon">Upload</span>
-                                    </div>
-                                    <div class="custom-file">
-                                        <input type="file" class="custom-file-input w-25" id="uploadEmailFile" name="attachment_file" aria-describedby="uploadEmailAddon">
-                                        <label class="custom-file-label" for="uploadEmailFile">Choose File</label>
-                                    </div>
+                                <div class="form-group">
+                                    <input type="file" class="form-control-file" id="uploadEmailFile" name="attachment_file" aria-describedby="uploadEmailAddon">
+                                    <label for="uploadEmailFile"></label>
                                 </div>
                             </div>
                             <button type="submit" name="nas_notify_form" class="btn btn-outline-primary mt-2">Submit</button>
